test_suite/tests/ui/fail_missing_derive.stderr
error[E0277]: the trait bound `PawType<u16>: TypeInfo` is not satisfied
  --> tests/ui/fail_missing_derive.rs:19:24
   |
19 |     assert_type_info::<Cat<bool, u8, u16>>();
   |                        ^^^^^^^^^^^^^^^^^^ the trait `TypeInfo` is not implemented for `PawType<u16>`
   |
   = help: the following other types implement trait `TypeInfo`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 57 others
note: required for `Cat<bool, u8, u16>` to implement `TypeInfo`
  --> tests/ui/fail_missing_derive.rs:8:10
   |
8  | #[derive(TypeInfo)]
   |          ^^^^^^^^
9  | #[scale_info(crate = info)]
10 | struct Cat<Tail, Ear, Paw> {
   |        ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_type_info`
  --> tests/ui/fail_missing_derive.rs:16:24
   |
16 | fn assert_type_info<T: TypeInfo + 'static>() {}
   |                        ^^^^^^^^ required by this bound in `assert_type_info`
   = note: this error originates in the derive macro `TypeInfo` (in Nightly builds, run with -Z macro-backtrace for more info)
